@@ -5857,6 +5857,7 @@ sub main {
    my %seen_id;           # already printed rule info (advice)
    my %seen_fingerprint;  # already seen queries
    my %advice_queue;      # queued up advice for --group-by
+   my %severity_count;    # note/warn/crit count for each query id
 
    # ########################################################################
    # Get configuration information.
@@ -6142,14 +6143,17 @@ sub main {
       push @pipeline, sub {
          my ( %args ) = @_;
          MKDEBUG && _d('callback: print advice');
-         my $event = $args{event};
+         my $event  = $args{event};
+         my $advice = $event->{advice};
+         return $event unless @$advice || $o->get('print-all');
+         $severity_count{$event->{query_id}}->{item} ||= $event->{fingerprint};
          print_advice(
             %args,
-            seen_id       => \%seen_id,
-            verbose       => $o->get('verbose'),
-            print_all     => $o->get('print-all'),
-            report_format => $o->get('report-format'),
-            Advisor       => $adv,
+            seen_id        => \%seen_id,
+            severity_count => \%severity_count,
+            verbose        => $o->get('verbose'),
+            report_format  => $o->get('report-format'),
+            Advisor        => $adv,
          );
          return $event;
       };
@@ -6158,13 +6162,18 @@ sub main {
       push @pipeline, sub {
          my ( %args ) = @_;
          MKDEBUG && _d('callback: queue advice for group-by', $groupby);
+         my $event  = $args{event};
+         my $advice = $event->{advice};
+         return $event unless @$advice || $o->get('print-all');
+         $severity_count{$event->{query_id}}->{item} ||= $event->{fingerprint};
          queue_advice(
-            advice_queue => \%advice_queue,
-            group_by     => $groupby,
-            event        => $args{event},
-            Advisor      => $adv,
+            %args,
+            advice_queue   => \%advice_queue,
+            severity_count => \%severity_count,
+            group_by       => $groupby,
+            Advisor        => $adv,
          );
-         return $args{event};
+         return $event;
       };
    }
 
@@ -6265,6 +6274,40 @@ sub main {
       )
    }
 
+   # ########################################################################
+   # Create and print profile of each items note/warn/crit count.
+   # ########################################################################
+   if ( keys %severity_count ) {
+      eval {
+         my $profile = new ReportFormatter(
+            long_last_column => 1,
+            extend_right     => 1,
+         );
+         $profile->set_title("Profile");
+         $profile->set_columns(
+            { name => 'Query ID',                     },
+            { name => 'NOTE',     right_justify => 1, },
+            { name => 'WARN',     right_justify => 1, },
+            { name => 'CRIT',     right_justify => 1, },
+            { name => 'Item',                         },
+         );
+         foreach my $query_id ( sort keys %severity_count ) {
+            $profile->add_line(
+               "0x$query_id",
+               $severity_count{$query_id}->{note} || 0,
+               $severity_count{$query_id}->{warn} || 0,
+               $severity_count{$query_id}->{crit} || 0,
+               $severity_count{$query_id}->{item} || "",
+            );
+         }
+         print $profile->get_report();
+      };
+      if ( $EVAL_ERROR ) {
+         # shouldn't happen but just in case ReportFormatter borks
+         warn "Error printing profile: $EVAL_ERROR";
+      };
+   }
+
    return 0;
 }
 
@@ -6274,31 +6317,30 @@ sub main {
 
 sub print_advice {
    my ( %args ) = @_;
-   my $event   = $args{event};
-   my $verbose = $args{verbose} || 0;
-   my $format  = $args{report_format};
-   my $adv     = $args{Advisor};
-   my $seen_id = $args{seen_id};
+   my $event          = $args{event};
+   my $verbose        = $args{verbose} || 0;
+   my $format         = $args{report_format};
+   my $adv            = $args{Advisor};
+   my $seen_id        = $args{seen_id};
+   my $severity_count = $args{severity_count};
 
    my $advice   = $event->{advice};
    my $near_pos = $event->{near_pos};
    my $n_advice = scalar @$advice;
    my @seen_ids;
 
-   return unless $n_advice || $args{print_all};
-
    # Header
-   my $id = $event->{query_id} || "";
-   print "\n# Query ID 0x$id at byte " . ($event->{pos_in_log} || 0) . "\n";
+   my $query_id = $event->{query_id} || "";
+   print "\n# Query ID 0x$query_id at byte " . ($event->{pos_in_log} || 0) . "\n";
 
    # New check IDs and their descriptions
    foreach my $i ( 1..$n_advice ) {
-      my $id   = $advice->[$i - 1];
-      my $pos  = $near_pos->[$i - 1];
-      my $info = $adv->get_rule_info($id);
-      my $desc = $info->{description} || '';  # shouldn't be blank
-      if ( $format eq 'compact' && $seen_id->{$id}++ ) {
-         push @seen_ids, $id;
+      my $rule_id = $advice->[$i - 1];
+      my $pos     = $near_pos->[$i - 1];
+      my $info    = $adv->get_rule_info($rule_id);
+      my $desc    = $info->{description} || '';  # shouldn't be blank
+      if ( $format eq 'compact' && $seen_id->{$rule_id}++ ) {
+         push @seen_ids, $rule_id;
       }
       else {
          # Haven't seen the description for this check ID yet so print it.
@@ -6310,7 +6352,7 @@ sub print_advice {
                   : $verbose == 2 ? "$desc[0] $desc[1]"  # fuller
                   : $verbose >  2 ? $desc                # complete
                   :                 '';                  # none
-         print "# ", uc $info->{severity}, " $id $desc\n";
+         print "# ", uc $info->{severity}, " $rule_id $desc\n";
 
          if ( $pos ) {
             my $offset = $pos > POS_CONTEXT ? $pos - POS_CONTEXT : 0;
@@ -6319,6 +6361,8 @@ sub print_advice {
                "\n";
          }
       }
+
+      $severity_count->{$query_id}->{$info->{severity}}++;
    }
 
    # Already seen check IDs
@@ -6332,11 +6376,12 @@ sub print_advice {
 
 sub queue_advice {
    my ( %args ) = @_;
-   my @required_args = qw(advice_queue group_by event Advisor);
+   my @required_args = qw(advice_queue severity_count group_by event Advisor);
    foreach my $arg ( @required_args ) {
       die "I need a $arg argument" unless $args{$arg};
    }
-   my ($advice_queue, $groupby, $event, $adv) = @args{@required_args};
+   my ($advice_queue, $severity_count, $groupby, $event, $adv)
+      = @args{@required_args};
 
    my $advice = $event->{advice};
    return unless scalar @$advice;
@@ -6350,16 +6395,15 @@ sub queue_advice {
    foreach my $rule_id ( @$advice ) {
       my $info = $adv->get_rule_info($rule_id);
       if ( $groupby eq 'query_id' ) {
-         $advice_queue->{$query_id}->{$rule_id}->{$info->{severity}}++;
-         $advice_queue->{$query_id}->{$rule_id}->{item} ||= $event->{fingerprint};
+         $advice_queue->{$query_id}->{$rule_id}++;
       }
       elsif ( $groupby eq 'rule_id' ) {
-         $advice_queue->{$rule_id}->{$query_id}->{$info->{severity}}++;
-         $advice_queue->{$rule_id}->{$query_id}->{item} ||= $event->{fingerprint};
+         $advice_queue->{$rule_id}->{$query_id}++;
       }
       else {
          die "I don't know how to group items by $groupby";
       }
+      $severity_count->{$query_id}->{$info->{severity}}++;
    } 
 
    return;
@@ -6375,43 +6419,15 @@ sub print_grouped_report {
    my $verbose = $args{verbose} || 0;
    my %seen;
 
-   my $profile = new ReportFormatter(
-      long_last_column => 1,
-      extend_right     => 1,
-   );
-   $profile->set_columns(
-      { name => 'Query ID',                     },
-      { name => 'NOTE',     right_justify => 1, },
-      { name => 'WARN',     right_justify => 1, },
-      { name => 'CRIT',     right_justify => 1, },
-      { name => 'Item',                         },
-   );
 
    foreach my $groupby_attrib ( sort keys %$advice_queue ) {
       print "0x" if $groupby eq 'query_id';
       print $groupby_attrib;
       foreach my $groupby_value (sort keys %{$advice_queue->{$groupby_attrib}}){
          print " " . ($groupby ne 'query_id' ? '0x' : '') . $groupby_value;
-
-         my $query_id = $groupby eq 'query_id' ? $groupby_attrib
-                      :                          $groupby_value;
-
-         if ( !$seen{$query_id}++ ) {
-            my $severities = $advice_queue->{$groupby_attrib}->{$groupby_value};
-            my ($note, $warn, $crit) = @{$severities}{qw(note warn crit)};
-            $profile->add_line(
-               "0x$query_id",
-               $note || 0,
-               $warn || 0,
-               $crit || 0,
-               $severities->{item} || "",
-            );
-         }
       }
       print "\n\n";
    }
-
-   print $profile->get_report();
 
    return;
 }
@@ -6848,8 +6864,11 @@ Port number to use for connection.
 
 =item --print-all
 
-Print all queries, even those that do not match any rules.  This only
-works for L<"--group-by"> C<none>.
+Print all queries, even those that do not match any rules.  With
+L<"--group-by"> C<none>, non-matching queries are printed in the main report
+and profile.  For other L<"--group-by"> values, non-matching queries are only
+printed in the profile.  Non-matching queries have zeros for C<NOTE>, C<WARN>
+and C<CRIT> in the profile.
 
 =item --query
 
