@@ -3,3 +3,7 @@
 # WARN CLA.001 SELECT without WHERE.
 # WARN CLA.006 GROUP BY or ORDER BY different tables will force a temp table and filesort.
 select id from tbl1 join tbl2 using (a) group by tbl1.id, tbl2.id
+# Profile
+# Query ID           NOTE WARN CRIT Item
+# ================== ==== ==== ==== ==========================================
+# 0xAED2E885BDADA166    0    2    0 select id from tbl? join tbl? using (a) group by tbl?id, tbl?id
