@@ -3,3 +3,7 @@
 # WARN LIT.002 Unquoted date/time literal.
 #   matches near: < 2010-02-15
 SELECT c FROM tbl WHERE c < 2010-02-15
+# Profile
+# Query ID           NOTE WARN CRIT Item
+# ================== ==== ==== ==== =============================
+# 0x0C74A51C7CA7AA15    0    1    0 select c from tbl where c < ?
