@@ -3,3 +3,7 @@
 # CRIT SUB.001 IN() and NOT IN() subqueries are poorly optimized.
 #   matches near: i in (select * from j)
 select t from w where i=1 or i in (select * from j)
+# Profile
+# Query ID           NOTE WARN CRIT Item
+# ================== ==== ==== ==== ==========================================
+# 0xD6E9D91F645455DB    0    0    1 select t from w where i=? or i in (select * from j)
