@@ -1,3 +1,7 @@
 
 # Query ID 0xE182E0865F5BEEBB at byte 0
 SELECT * FROM tbl WHERE id=1
+# Profile
+# Query ID           NOTE WARN CRIT Item
+# ================== ==== ==== ==== ============================
+# 0xE182E0865F5BEEBB    0    0    0 select * from tbl where id=?
