@@ -2,3 +2,7 @@
 # Query ID 0x34C93ACCCD015F48 at byte 0
 # NOTE COL.001 SELECT *.
 SELECT tbl.* FROM tbl WHERE id=2
+# Profile
+# Query ID           NOTE WARN CRIT Item
+# ================== ==== ==== ==== ================================
+# 0x34C93ACCCD015F48    1    0    0 select tbl.* from tbl where id=?
