@@ -4,3 +4,7 @@
 # WARN ALI.002 Aliasing the '*' wildcard.
 # NOTE COL.001 SELECT *.
 SELECT tbl.* foo, bar FROM tbl WHERE id=1
+# Profile
+# Query ID           NOTE WARN CRIT Item
+# ================== ==== ==== ==== =========================================
+# 0x75364D6054FA40ED    2    1    0 select tbl.* foo, bar from tbl where id=?
