@@ -3,3 +3,7 @@
 # WARN ALI.002 Aliasing the '*' wildcard.
 # NOTE COL.001 SELECT *.
 SELECT tbl.* AS foo, bar FROM tbl WHERE id=2
+# Profile
+# Query ID           NOTE WARN CRIT Item
+# ================== ==== ==== ==== ==========================================
+# 0x31C7ABF526209286    1    1    0 select tbl.* as foo, bar from tbl where id=?
